--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -1454,7 +1454,7 @@ I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
 Then I give an example in which the internal dative case is more complex than the external accusative case.
 I end with an example in which the external dative case is more complex than the internal accusative case.
-I show that the first two examples are grammatical and the last one is not. I derive this by showing that only in the first two situations the light head forms a constituent within the relative pronoun in these cases, and can therefore be deleted.
+I show that the first two examples are grammatical and the last one is not. I derive this by showing that only in the first two situations the light head forms a constituent within the relative pronoun in these cases, and that it can therefore then be deleted.
 
 I start with the matching cases.
 Consider the example in \ref{ex:mg-acc-acc-rep}, in which the internal accusative case competes against the external accusative case. The relative clause is marked in bold.
@@ -1537,7 +1537,7 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
 
 The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 The extra light head consists of a single morpheme: \tit{n}.
-As usual, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it.
+As usual, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
 I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single constituent: the \tsc{acc}P.
@@ -1629,7 +1629,7 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
 
 The relative pronoun consists of two morphemes: \tit{we} and \tit{m}.
 The extra light head consists of a single morpheme: \tit{n}.
-As usual, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it.
+Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
 I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single constituent: the \tsc{acc}P.
@@ -1727,7 +1727,7 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
 
 The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 The extra light head consists of a single morpheme: \tit{m}.
-As usual, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it.
+Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
 I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single constituent: the \tsc{dat}P.
